[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/characters/demons/demon/demon.tscn" type="PackedScene" id=1]
[ext_resource path="res://characters/demon/commen/demon.gd" type="Script" id=2]
[ext_resource path="res://characters/common/activateArea.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/characters/demons/demon/demon eyes.material" type="Material" id=4]
[ext_resource path="res://characters/common/hitBoxes.tscn" type="PackedScene" id=5]
[ext_resource path="res://characters/common/characterMover.tscn" type="PackedScene" id=6]
[ext_resource path="res://characters/demon/commen/KinematicBody.gd" type="Script" id=7]
[ext_resource path="res://characters/common/lookAt.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/images/smoke/smoke.png" type="Texture" id=9]

[sub_resource type="CapsuleShape" id=1]
radius = 0.4
height = 1.2

[sub_resource type="ParticlesMaterial" id=2]
emission_shape = 1
emission_sphere_radius = 1.0
gravity = Vector3( 0, 2, 0 )

[sub_resource type="SpatialMaterial" id=7]
flags_transparent = true
vertex_color_use_as_albedo = true
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_texture = ExtResource( 9 )

[sub_resource type="QuadMesh" id=4]
material = SubResource( 7 )

[sub_resource type="Animation" id=5]
length = 0.001

[sub_resource type="Animation" id=6]
resource_name = "death1"
length = 2.0
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicBody/mesh/deathEffect:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("KinematicBody/mesh/deathEffect/OmniLight:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.01, 0.03 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("KinematicBody/mesh/demon:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.01 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("KinematicBody/worldCollider:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.01 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("KinematicBody/hitBoxes/CollisionShape:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.01 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("KinematicBody/mesh/deathEffect:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="demon" type="Spatial"]
script = ExtResource( 2 )

[node name="KinematicBody" type="KinematicBody" parent="."]
collision_layer = 2
collision_mask = 524291
input_ray_pickable = false
script = ExtResource( 7 )

[node name="worldCollider" type="CollisionShape" parent="KinematicBody"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1, 0 )
shape = SubResource( 1 )

[node name="mesh" type="Spatial" parent="KinematicBody"]

[node name="demon" parent="KinematicBody/mesh" instance=ExtResource( 1 )]
transform = Transform( -0.6, -5.24537e-08, -9.05975e-08, -5.24537e-08, 0.6, -2.29283e-15, 9.05975e-08, 5.62746e-15, -0.6, 0, 1.2, 0 )

[node name="eyes" parent="KinematicBody/mesh/demon" index="1"]
material/0 = ExtResource( 4 )

[node name="RemoteTransform" type="RemoteTransform" parent="KinematicBody/mesh/demon"]
remote_path = NodePath("../../../hitBoxes")

[node name="RemoteTransform2" type="RemoteTransform" parent="KinematicBody/mesh/demon"]
remote_path = NodePath("../../../../lookAt")
update_rotation = false
update_scale = false

[node name="RemoteTransform3" type="RemoteTransform" parent="KinematicBody/mesh/demon"]
remote_path = NodePath("../../deathEffect")

[node name="deathEffect" type="Particles" parent="KinematicBody/mesh"]
transform = Transform( -0.6, -5.24537e-08, -9.05975e-08, -5.24537e-08, 0.6, -2.29283e-15, 9.05975e-08, 5.62746e-15, -0.6, 0, 1.2, 0 )
visible = false
emitting = false
amount = 100
lifetime = 2.0
one_shot = true
explosiveness = 0.95
visibility_aabb = AABB( -4, -2.72754, -4, 8, 8, 8 )
process_material = SubResource( 2 )
draw_pass_1 = SubResource( 4 )

[node name="OmniLight" type="OmniLight" parent="KinematicBody/mesh/deathEffect"]
visible = false
light_color = Color( 0.941176, 0.0666667, 0.0666667, 1 )
light_energy = 2.0

[node name="activateArea" parent="KinematicBody" instance=ExtResource( 3 )]

[node name="hitBoxes" parent="KinematicBody" instance=ExtResource( 5 )]
transform = Transform( -0.6, -5.24537e-08, -9.05975e-08, -5.24537e-08, 0.6, -2.29283e-15, 9.05975e-08, 5.62746e-15, -0.6, 0, 1.2, 0 )

[node name="characterMover" parent="KinematicBody" instance=ExtResource( 6 )]

[node name="makeDemonHover" type="Tween" parent="."]
repeat = true
playback/repeat = true

[node name="lookAt" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, 0 )

[node name="RemoteTransformX" parent="lookAt/rotateY/rotateX" index="0"]
transform = Transform( -4.37114e-08, 1, 0, 1, 4.37114e-08, 8.74228e-08, 8.74228e-08, 3.82137e-15, -1, 0, 0, 0 )
remote_path = NodePath("../../../../KinematicBody/mesh/demon")
update_position = false
update_scale = false

[node name="death" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 5 )
anims/death1 = SubResource( 6 )

[connection signal="dead" from="KinematicBody/hitBoxes/healthManager" to="." method="_on_healthManager_dead"]
[connection signal="animation_finished" from="death" to="." method="_on_death_animation_finished"]

[editable path="KinematicBody/mesh/demon"]
[editable path="KinematicBody/hitBoxes"]
[editable path="lookAt"]
